fixed alignment

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,9 +3,7 @@
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+  padding: 2rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -42,7 +40,7 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 
 .title,
@@ -51,7 +49,7 @@
 }
 
 .description {
-  margin: 4rem 0;
+  margin: 2rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
 }
@@ -118,6 +116,15 @@
 .editor {
   background-color: #ededed;
   min-height: 500px;
-  min-width: 500px;
-  font-size: large;
+  min-width: 600px;
+  font-size: larger;
+  margin-right: 10;
+  border-width: 0ch;
+  padding: 1rem;
+}
+
+.containereditor {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
